# rust-rtic-microbit-template

./: .neoconf.json  Cargo.toml  Embed.toml  Makefile  README.md  build.rs  flake.nix  rust-toolchain.toml
src/: logging.rs  main.rs
